tests/error/idiv_type.src
.IPPcode18
defvar GF@a
defvar GF@b
move GF@a string@a
move GF@b int@1
idiv GF@a GF@a GF@b